--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,11 +1,13 @@
+h2 {margin-top: 44px!important;}
 details {padding: 0px 0px 20px 48px !important;}
-details > summary {font-weight: bold!important;}
+details > summary {font-weight: bold!important; text-decoration: underline; color: darkslateblue;}
 .highlight{margin-bottom: 0px;}
 $code_bg_color: #e0f0fd;
 
 pre, pre.highlight {background-color: $code_bg_color!important; border: none;}
 code, pre > code {white-space: pre-wrap !important; background-color:$code_bg_color!important;}
-.continue_list {margin-top: 20px;}
+.continue_list {margin-top: 22px;}
+.continue_sub_list {margin-top: 12px;}
 ul > li > p {margin-top: 0px; margin-bottom: 0px;}
 
 .possible_errors {background-color: #ffe9e0; padding: 0 6px;}
